--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -35,7 +35,7 @@
                     </li>
                     <li id="system-setting-3">
                         <a href="/resource/findAll">
-                            <i class="fa fa-circle-o"></i> 资源管理
+                            <i class="fa fa-circle-o"></i> 权限管理
                         </a>
                     </li>
                     <li id="system-setting-4">
@@ -47,7 +47,7 @@
             </li>
             <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-cube"></i> <span>基础数据</span>
+                    <i class="fa fa-cube"></i> <span>数据管理</span>
                     <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span>
                 </a>
                 <ul class="treeview-menu">
