--- a/src/main/resources/templates/content-users-role-list.html
+++ b/src/main/resources/templates/content-users-role-list.html
@@ -4,7 +4,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>用户管理</title>
+    <title>用户角色</title>
     <meta name="description" content="AdminLTE2定制版">
     <meta name="keywords" content="AdminLTE2定制版">
     <!-- Tell the browser to be responsive to screen width -->
@@ -91,12 +91,12 @@
                         <div class="pull-left">
                             <div class="form-group form-inline">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default" title="新建"
-                                            onclick='location.href="/users/add"'>
+                                    <button type="button" class="btn btn-default" title=
+                                            "新建">
                                         <i class="fa fa-file-o"></i> 新建
                                     </button>
-                                    <button type="button" class="btn btn-default" title="刷新"
-                                            onclick='location.href="/users/findAll"'>
+                                    <button type="button" class="btn btn-default" title=
+                                            "刷新">
                                         <i class="fa fa-refresh"></i> 刷新
                                     </button>
                                 </div>
@@ -105,54 +105,32 @@
                         <div class="box-tools pull-right">
                             <div class="has-feedback">
                                 <input type="text" class="form-control input-sm"
-                                       placeholder="搜索"><span
-                                    class="glyphicon glyphicon-search form-controlfeedback"></span>
+                                       placeholder="搜索"> <span
+                                    class="glyphicon glyphicon-search form-control-feedback"></span>
                             </div>
                         </div>
                         <!--工具栏/-->
                         <!--数据列表-->
-                        <table id="dataList"
-                               class="table table-bordered table-striped table-hover dataTable">
-                            <thead>
-                            <tr>
-                                <th class="" style="padding-right: 0px"><input
-                                        id="selall" type="checkbox" class="icheckbox_square-blue">
-                                </th>
-                                <th class="sorting_asc">ID</th>
-                                <th class="sorting_desc">用户名</th>
-                                <th class="sorting_asc sorting_asc_disabled">邮箱
-                                </th>
-                                <th class="sorting_desc sorting_desc_disabled">
-                                    联系电话</th>
-                                <th class="sorting">状态</th>
-                                <th class="text-center">操作</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="users : ${usersList}">
-                                <td><input name="ids" type="checkbox"></td>
-                                <td th:text="${users.id}"></td>
-                                <td th:text="${users.username}"></td>
-                                <td th:text="${users.email}"></td>
-                                <td th:text="${users.phoneNum}"></td>
-                                <td th:text="${users.status}"></td>
-                                <td class="text-center">
-                                    <a th:href='@{/users/findById/1}' class
-                                            ="btn bg-olive btn-xs">详情</a>
-                                </td>
-                            </tr>
-                            </tbody>
-                            <!--
-                            <tfoot>
-                            <tr>
-                            <th>Rendering engine</th>
-                            <th>Browser</th>
-                            <th>Platform(s)</th>
-                            <th>Engine version</th>
-                            <th>CSS grade</th>
-                            </tr>
-                            </tfoot>-->
-                        </table>
+                        <div class="tab-pane" id="tab-treetable">
+                            <table id="collapse-table"
+                                   class="table table-bordered table-hover dataTable">
+                                <thead>
+                                <tr>
+                                    <th>名称</th>
+                                    <th>描述</th>
+                                </tr>
+                                </thead>
+                                <tr data-tt-id="0">
+                                    <td th:text="${users.username}" colspan="2"></td>
+                                </tr>
+                                <tbody>
+                                <tr th:each="role : ${users.roleList}" data-tt-id="1" data-tt-parent-id="0">
+                                    <td th:text="${role.roleName}"></td>
+                                    <td th:text="${role.roleDesc}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                         <!--数据列表/-->
                     </div>
                     <!-- 数据表格 /-->
@@ -247,6 +225,9 @@
         $(".textarea").wysihtml5({
             locale : 'zh-CN'
         });
+        $("#collapse-table").treetable({
+            expandable : true
+        });
     });
     // 设置激活菜单
     function setSidebarActive(tagUri) {
@@ -256,38 +237,25 @@
             liObj.addClass("active");
         }
     }
-    $(document)
-        .ready(
-            function() {
+    $(document).ready(function() {
 // 激活导航位置
-                setSidebarActive("admin-datalist");
+        setSidebarActive("admin-datalist");
 // 列表按钮
-                $("#dataList td input[type='checkbox']")
-                    .iCheck(
-                        {
-                            checkboxClass : 'icheckbox_square-blue',
-                            increaseArea : '20%'
-                        });
+        $("#dataList td input[type='checkbox']").iCheck({
+            checkboxClass : 'icheckbox_square-blue',
+        increaseArea : '20%'
+    });
 // 全选操作
-                $("#selall")
-                    .click(
-                        function() {
-                            var clicks = $(this).is(
-                                ':checked');
-                            if (!clicks) {
-                                $(
-                                    "#dataList td input[type='checkbox']")
-                                    .iCheck(
-                                        "uncheck");
-                            } else {
-                                $(
-                                    "#dataList td input[type='checkbox']")
-                                    .iCheck("check");
-                            }
-                            $(this).data("clicks",
-                                !clicks);
-                        });
-            });
+        $("#selall").click(function() {
+            var clicks = $(this).is(':checked');
+            if (!clicks) {
+                $("#dataList td input[type='checkbox']").iCheck("uncheck");
+            } else {
+                $("#dataList td input[type='checkbox']").iCheck("check");
+            }
+            $(this).data("clicks", !clicks);
+        });
+    });
 </script>
 </body>
 </html>
