--- a/src/main/resources/templates/base-login.html
+++ b/src/main/resources/templates/base-login.html
@@ -27,7 +27,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <a href="base-index.html">数据管理系统</a>
+        <a href="content-index.html">数据管理系统</a>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
