--- a/src/main/resources/templates/content-index.html
+++ b/src/main/resources/templates/content-index.html
@@ -110,7 +110,142 @@
     <!-- 导航侧栏 /-->
     <!-- 内容区域 -->
     <div class="content-wrapper">
-        <img src="/img/center.jpg" width="100%" height="100%"/>
+
+        <!-- 内容头部 -->
+        <section class="content-header">
+            <h1>
+                控制面板
+                <small>首页</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="all-admin-index.html"><i class="fa fa-dashboard"></i> 首页</a></li>
+            </ol>
+        </section>
+        <!-- 内容头部 /-->
+
+        <!-- 正文区域 -->
+        <section class="content">
+
+
+            <!-- 统计数值 -->
+            <div class="row">
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-aqua">
+                        <div class="inner">
+                            <h3>150</h3>
+
+                            <p>新订单</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-bag"></i>
+                        </div>
+                        <a href="all-order-manage-list.html" class="small-box-footer">详细 <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-green">
+                        <div class="inner">
+                            <h3>53<sup style="font-size: 20px">%</sup></h3>
+
+                            <p>转化率</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a href="all-ad-statistics-list.html" class="small-box-footer">详细 <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-yellow">
+                        <div class="inner">
+                            <h3>44</h3>
+
+                            <p>新注册用户</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                        <a href="all-member-manage-list.html" class="small-box-footer">详细 <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-red">
+                        <div class="inner">
+                            <h3>65</h3>
+
+                            <p>日PV</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-pie-graph"></i>
+                        </div>
+                        <a href="all-ad-statistics-list.html" class="small-box-footer">详细 <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+            </div>
+            <!-- /.row -->
+
+
+            <!-- 待处理订单 -->
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <i class="fa fa-cube"></i>
+                    <h3 class="box-title">待处理订单</h3>
+                </div>
+
+                <div class="box-body">
+
+                    <!-- 数据表格 -->
+                    <div class="table-box">
+
+                        <!--数据列表-->
+                        <table id="dataList1" class="table table-bordered table-striped table-hover dataTable">
+                            <thead>
+                            <tr>
+                                <th class="">订单号</th>
+                                <th class="">产品名称</th>
+                                <th class="">会员</th>
+                                <th class="">价格</th>
+                                <th class="">状态</th>
+                                <th class="text-center">操作</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            <tr th:each="orders : ${ordersList}">
+                                <td th:text="${orders.orderNum}"></td>
+                                <td th:text="${orders.product.productName}"></td>
+                                <td th:text="${orders.member.name}"></td>
+                                <td th:text="${orders.product.productPrice} * ${orders.peopleCount}"></td>
+                                <td th:text="${orders.orderStatus}"></td>
+                                <td class="text-center">
+                                    <button type="button" class="btn bg-olive btn-xs" onclick='location.href="all-product-line-edit.html"'>编辑</button>
+                                </td>
+                            </tr>
+
+                            </tbody>
+                        </table>
+                        <!--数据列表/-->
+
+                    </div>
+                    <!-- 数据表格 /-->
+
+                </div>
+                <!-- /.box-body -->
+
+            </div>
+            <!-- 待处理订单 /-->
+
+        </section>
+        <!-- 正文区域 /-->
+
     </div>
     <!-- 内容区域 /-->
     <!-- 底部导航 -->
