--- a/src/main/resources/templates/content-index.html
+++ b/src/main/resources/templates/content-index.html
@@ -118,7 +118,7 @@
                 <small>首页</small>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="all-admin-index.html"><i class="fa fa-dashboard"></i> 首页</a></li>
+                <li><a href="/index"><i class="fa fa-dashboard"></i> 首页</a></li>
             </ol>
         </section>
         <!-- 内容头部 /-->
