--- a/src/main/resources/templates/content-permission-add.html
+++ b/src/main/resources/templates/content-permission-add.html
@@ -46,8 +46,6 @@
     <link rel="stylesheet"
           href="/plugins/adminLTE/css/skins/_all-skins.min.css">
     <link rel="stylesheet"
-          93
-          北京市昌平区建材城西路金燕龙办公楼一层 电话：400-618-9090
           href="/css/style.css">
     <link rel="stylesheet"
           href="/plugins/ionslider/ion.rangeSlider.css">
@@ -75,16 +73,14 @@
                 <small>权限资源表单</small>
             </h1>
             <ol class="breadcrumb">
-                96
-                北京市昌平区建材城西路金燕龙办公楼一层 电话：400-618-9090
-                <li><a href="/index.jsp"><i
+                <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
-                <li><a href="/permission/findAll.do">权限资源管理</a></li>
+                <li><a href="/permission/findAll">权限资源管理</a></li>
                 <li class="active">权限资源表单</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
-        <form action="/permission/save.do"
+        <form action="/permission/save"
               method="post">
             <!-- 正文区域 -->
             <section class="content"> <!--产品信息-->
