--- a/src/main/resources/templates/content-users-role-add.html
+++ b/src/main/resources/templates/content-users-role-add.html
@@ -75,13 +75,13 @@
                 <li><a href="/index"><i
                         class="fa fa-dashboard"></i> 首页</a></li>
                 <li><a
-                        href="/user/findAll.do">用户管理</a></li>
+                        href="/user/findAll">用户管理</a></li>
                 <li class="active">添加角色表单</li>
             </ol>
         </section>
         <!-- 内容头部 /-->
         <form
-                action="/user/addRoleToUser.do"
+                action="/users/addRoleToUser"
                 method="post">
             <!-- 正文区域 -->
             <section class="content"> <input type="hidden" name="userId"
@@ -93,11 +93,8 @@ able">
                     <tr>
                         <th class="" style="padding-right: 0px">
                             <input id="selall"
-                                   type="checkbox" class="icheckbox_square-blue"></
-                        th>
+                                   type="checkbox" class="icheckbox_square-blue"></th>
                         <th class="sorting_asc">ID</th>
-                        52
-                        北京市昌平区建材城西路金燕龙办公楼一层 电话：400-618-9090
                         <th class="sorting">角色名称</th>
                         <th class="sorting">角色描述</th>
                     </tr>
