--- a/src/main/resources/templates/content-users-role-list.html
+++ b/src/main/resources/templates/content-users-role-list.html
@@ -91,9 +91,9 @@
                         <div class="pull-left">
                             <div class="form-group form-inline">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default" title=
-                                            "新建">
-                                        <i class="fa fa-file-o"></i> 新建
+                                    <button type="button" class="btn btn-default" title="添加"
+                                            th:href="@{'/users/findUserByIdAndAllRole/'+${users.id}}">
+                                        <i class="fa fa-file-o"></i> 添加
                                     </button>
                                     <button type="button" class="btn btn-default" title=
                                             "刷新">
