--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,7 +25,7 @@
                             <img src="/img/user2-160x160.jpg" class="imgcircle"
                                  alt="User Image">
                             <p>
-                                黑马 - 数据管理员
+                                韩晓星 - 数据管理员
                                 <small>最后登录 11:20AM</small>
                             </p>
                         </li>
