--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -7,7 +7,7 @@
                 <img src="/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>黑马</p>
+                <p>韩晓星</p>
                 <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
             </div>
         </div>
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li id="system-setting-3">
-                        <a href="/resource/findAll">
+                        <a href="/permission/findAll">
                             <i class="fa fa-circle-o"></i> 权限管理
                         </a>
                     </li>
