--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                     <li id="system-setting-4">
-                        <a href="/log/findAll">
+                        <a href="/sysLog/findAll">
                             <i class="fa fa-circle-o"></i> 日志管理
                         </a>
                     </li>
